@@ -25,6 +25,7 @@
 - fix couple of memory leaks.
 - add command line option to override check for daemon already running.
 - don't use proc file system when checking if the daemon is running.
+- make handle_mounts startup condition distinct.
  
 14/01/2008 autofs-5.0.3
 -----------------------
